--- a/index.html
+++ b/index.html
@@ -3,11 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
     <title>Boolzap</title>
 </head>
 <body>
-    
+    <!-- Main -->
+    <main>
+        <!-- Sfondo -->
+        <div class="background">
+
+            <!-- Contenitore per l'interfaccia utente -->
+            <div class="window_container">
+                <div class="sidebar">
+                    <div class="header border-end">
+                    </div>
+                </div>
+                <div class="message-section">
+                    <div class="header"></div>
+                </div>
+            </div>
+        </div>
+    </main>
     <script src="./js/script.js"></script>
 </body>
 </html>
