--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
     <title>Boolzap</title>
@@ -16,11 +17,70 @@
             <!-- Contenitore per l'interfaccia utente -->
             <div class="window_container">
                 <div class="sidebar">
+
+                    <!-- Header della sidebar -->
                     <div class="header border-end">
+                        <!-- Informazioni personali -->
+                        <div class="personal-info">
+
+                            <!-- Foto profilo [Personale] -->
+                            <div class="profile-pic">
+                                <img src="./img/avatar_io.jpg" alt="Foto profilo" class="img-profile">
+                            </div>
+
+                            <!-- Nome [Personale] -->
+                            <span class="name fs-5">Sofia</span>
+                        </div>
+
+                        <div class="profile-icons">
+                            <i class="fas fa-message me-3"></i>
+                            <i class="fas fa-message me-3"></i>
+                            <i class="fas fa-message me-3"></i>
+                        </div>
                     </div>
+
+                    <!-- Sezione ricezione notifiche -->
+                    <div class="notifications"></div>
+
+                    <!-- Sezione ricerca messaggi o contatti -->
+                    <div class="searchbar"></div>
+
                 </div>
+
+                <!-- Finestra per la visualizzazione dei messaggi -->
                 <div class="message-section">
-                    <div class="header"></div>
+
+                    <!-- Header della sezione messaggi -->
+                    <div class="header">
+                        <!-- Informazioni personali -->
+                        <div class="personal-info">
+
+                            <!-- Foto profilo [Personale] -->
+                            <div class="profile-pic">
+                                <img src="./img/avatar_1.jpg" alt="Foto profilo" class="img-profile">
+                            </div>
+
+                            <!-- Informazioni utente -->
+                            <div class="user-info">
+                                <!-- Nome [Personale] -->
+                                <span class="name fs-5">Sofia</span>
+
+                                <!-- Ultimo accesso -->
+                                <span>Ultimo accesso</span>
+                            </div>
+                            
+                        </div>
+
+                        <!-- Icone gestione chat -->
+                        <div class="profile-icons">
+                            <i class="fas fa-message me-3"></i>
+                            <i class="fas fa-message me-3"></i>
+                            <i class="fas fa-message me-3"></i>
+                        </div>
+                    </div>
+
+                    <!-- Sezione per l'invio dei messaggi -->
+                    <div class="input_section"></div>
                 </div>
             </div>
         </div>
