--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
     <title>Boolzap</title>
 </head>
+
 <body>
     <!-- Main -->
     <main>
@@ -33,17 +38,29 @@
                         </div>
 
                         <div class="profile-icons">
-                            <i class="fas fa-message me-3"></i>
-                            <i class="fas fa-message me-3"></i>
-                            <i class="fas fa-message me-3"></i>
+                            <i class="fas fa-circle-notch"></i>
+                            <i class="fas fa-message ms-4"></i>
+                            <i class="fa-solid fa-ellipsis-vertical ms-4 me-2"></i>
                         </div>
                     </div>
 
                     <!-- Sezione ricezione notifiche -->
-                    <div class="notifications"></div>
+                    <div class="notifications">
+                        <div class="notifications-icon-container">
+                            <i class="fas fa-bell-slash fs-4"></i>
+                        </div>
+
+                        <div class="text-notifications">
+                            <span class="ms-3"><strong>Ricevi notifiche di nuovi messaggi</strong></span>
+                            <span class="ms-3 text-decoration-underline">Attiva notifiche messaggi</span>
+                        </div>
+                    </div>
 
                     <!-- Sezione ricerca messaggi o contatti -->
-                    <div class="searchbar"></div>
+                    <div class="searchbar">
+                        <i class="fa-solid fa-magnifying-glass fs-5 me-2"></i>
+                        <input type="text" class="form-control" placeholder="Cerca">
+                    </div>
 
                 </div>
 
@@ -68,23 +85,38 @@
                                 <!-- Ultimo accesso -->
                                 <span>Ultimo accesso</span>
                             </div>
-                            
+
                         </div>
 
                         <!-- Icone gestione chat -->
                         <div class="profile-icons">
-                            <i class="fas fa-message me-3"></i>
-                            <i class="fas fa-message me-3"></i>
-                            <i class="fas fa-message me-3"></i>
+                            <i class="fa-solid fa-magnifying-glass me-3"></i>
+                            <i class="fa-solid fa-paperclip me-3"></i>
+                            <i class="fa-solid fa-ellipsis-vertical ms-1 me-3"></i>
                         </div>
                     </div>
 
                     <!-- Sezione per l'invio dei messaggi -->
-                    <div class="input_section"></div>
+                    <div class="input_section">
+
+                        <!-- Pulsante per l'invio delle emoji -->
+                        <div class="emoji-button">
+                            <i class="fas fa-face-smile-beam fs-3"></i>
+                        </div>
+                        
+                        <!-- Input per l'invio dei messaggi -->
+                        <input type="text" class="form-control" placeholder="Scrivi un messaggio...">
+
+                        <!-- Icona per l'invio -->
+                        <div class="emoji-button">
+                            <i class="fas fa-microphone fs-3 ms-3"></i>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </main>
     <script src="./js/script.js"></script>
 </body>
+
 </html>
