--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
                             <!-- Informazioni utenti nella sidebar -->
                             <div class="user-info-sidebar">
                                 <span class="fs-5"><strong>{{ contacts[index].name }}</strong></span>
-                                <span class="last-message">{{ contacts[index].messages[1].message}}</span>
+                                <span class="last-message">{{ contacts[index].messages[contacts[index].messages.length - 1].message }}</span>
                                 <!-- Cambiare -->
                             </div>
 
                             <!-- Orario dell'ultimo messaggio inviato -->
                             <div class="last-message-time">
-                                02:43
+                                {{ contacts[index].messages[contacts[index].messages.length - 1].date }}
                             </div>
                         </div>
 
